Fix: Logo Link to Home Route. + This commit addresses an issue where the logo in the navigation bar was not correctly redirecting to the home route when clicked. The logo element has been wrapped with a 'Link' component from 'react-router-dom'. The 'to' prop of this 'Link' component is set to '/', ensuring that clicking the logo now navigates the user back to the home page of the application. This fix enhances the user experience by providing expected and consistent navigation behavior.

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,6 @@ body {
 .hidden {
   display: none;
 }
+.remove-text-decoration{
+  text-decoration: none;
+}
